fixed jumbotron display so it is positioned correctly with no white space around it.

--- a/client/public/assests/css/style.css
+++ b/client/public/assests/css/style.css
@@ -6,7 +6,7 @@ html {
   }
   body {
     margin-bottom: 60px; /* Margin bottom by footer height */
-    padding-top: 60px; /* space for fixed nav */
+    padding-top: 56px; /* space for fixed nav */
   }
   .footer {
     position: absolute;
